--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,9 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.16.3"
   },
   "devDependencies": {
